# reptyr

./: .cirrus.yml  .gitignore  .travis.yml  BUGS  COPYING  COPYING.md  ChangeLog  Makefile  Makefile.am  NOTES  README  README.md  Vagrantfile  attach.c  configure.ac  ptrace.c  ptrace.h  reallocarray.c  reallocarray.h  release.sh  reptyr.1  reptyr.bash  reptyr.c  reptyr.fr.1  reptyr.h  reptyr_0.1+git.20110212t183758.d51bfc2d.orig.tar.gz.delta  reptyr_0.1+git.20110212t183758.d51bfc2d.orig.tar.gz.id  reptyr_0.3.orig.tar.gz.delta  reptyr_0.3.orig.tar.gz.id  reptyr_0.5.orig.tar.gz.delta  reptyr_0.5.orig.tar.gz.id  reptyr_0.6.2.orig.tar.gz.delta  reptyr_0.6.2.orig.tar.gz.id  reptyr_0.8.0.orig.tar.gz.delta  reptyr_0.8.0.orig.tar.gz.id  reptyr_0.9.0.orig.tar.gz.delta  reptyr_0.9.0.orig.tar.gz.id  stub.c
.circleci/: config.yml
.github/workflows/: ci.yml
arch/: amd64.h  arm.h  default-syscalls.h  i386.h  x86_common.h
compat/: reallocarray.c
debian/: .gitignore  README.source  changelog  control  copyright  gbp.conf  rules  watch
debian/patches/: accept-cmd-line-build-flags.patch  fix-ftbfs-gcc7.patch  series  use-python3.patch
debian/upstream/: metadata
platform/: platform.h
platform/freebsd/: freebsd.c  freebsd.h  freebsd_ptrace.c
platform/freebsd/arch/: aarch64.h  amd64.h  arm.h  default-syscalls.h  i386.h  x86_common.h
platform/linux/: linux.c  linux.h  linux_ptrace.c
platform/linux/arch/: aarch64.h  amd64.h  default-syscalls.h  i386.h  powerpc.h  (+2 more)
rpm/: reptyr.spec
test/: .gitignore  basic.py  matrix.sh  requirements.txt  tty-steal.py  util.py  victim.c
